app/assets/stylesheets/adventure.css.scss
/* Import the variables for the general theme */
@import "variables.css.scss";

/* Define all custom css here, but start every class and id with the filename. For example:
#about-box { width: 100%; }
.about-potato { width: 100px; }
for the about.css.scss file custom styling*/

#campaigns-adventure-white {
  width: 666px;
  height: 500px;
  float: left;

  position: relative;
  z-index: 4;
  top: -1000px;

  background-color: #FFF;
}

.campaigns-adventure-background {
  width: 666px;
  height: 500px;
  background-position: 0 0;
  float: left;
  overflow: hidden;
}

#ca-egypt-background {
  background: url(asset_path("egypt_background.png"));
  background-repeat: no-repeat;
}

#ca-safari-background {
  background: url(asset_path("safari_background.png"));
  background-repeat: no-repeat;
}

#ca-timbuktu-background {
  background: url(asset_path("timbuktu_background.png"));
  background-repeat: no-repeat;
}

#ca-victoria-background {
  background: url(asset_path("victoria_background.png"));
  background-repeat: no-repeat;
}

#ca-morroco-background {
  background: url(asset_path("morroco_background.png"));
  background-repeat: no-repeat;
}

.campaigns-adventure-foreground {
  width: 666px;
  height: 500px;
  background-position: 0 0;
  float: left;
  position: relative;
  z-index: 3;
  top: -500px;
}

#ca-egypt-foreground {
  background: url(asset_path("egypt_foreground.png"));
  background-repeat: no-repeat;
}

#ca-safari-foreground {
  background: url(asset_path("safari_foreground.png"));
  background-repeat: no-repeat;
}

#ca-timbuktu-foreground {
  background: url(asset_path("timbuktu_foreground.png"));
  background-repeat: no-repeat;
}

#ca-victoria-foreground {
  background: url(asset_path("victoria_foreground.png"));
  background-repeat: no-repeat;
}

#ca-morroco-foreground {
  background: url(asset_path("morroco_foreground.png"));
  background-repeat: no-repeat;
}

.campaigns-adventure-team {
  width: 196px;
  height: 128px;
  position: relative;
  z-index: 2;

  transform-origin: 50% 90%;
  transition: all 1s ease-in-out;
}

.campaigns-adventure-team-hide {
  transform: scale(0);
}

.campaigns-adventure-team-show {
  transform: scale(1);
}

#campaigns-adventure-team-boat {
  top: 55px;
}

#campaigns-adventure-team-jeep {
  top: 20px;
}

#campaigns-adventure-team-balloon {
  top: -80px;
  left: -45px;
}

.campaigns-adventure-prompt-container {
  position: relative;
  display: inline-block;
  width: 6em;
  height: 8em;
}

.campaigns-adventure-prompt-container-big {
  width: 16em;
  left: -2em;
}

.campaigns-adventure-prompt-rectangle {
  position: absolute;
  display: inline-block;
  width: 6em;
  height: 6em;
  border-radius: 0.5em;
  background-color: #F18FC2;
  left: 0em;
  top: 0em
}

.campaigns-adventure-prompt-rectangle-big {
  width: 16em;
}

.campaigns-adventure-prompt-triangle {
  position: absolute;
  display: inline-block;
  width: 0;
  height: 0;
  line-height: 0;
  border: 1em solid transparent;
  border-top: 1em solid #F18FC2;
  left: 2em;
  top: 5.9em;
}

.campaigns-adventure-prompt-triangle-big {
  left: 7em;
}

#campaigns-adventure-prompt-picture {
  margin: .5em .5em;
  display: inline-block;
  float: left;
  width: 5em;
  height: 5em;
  border-radius: 2.5em;
  -webkit-border-radius: 2.5em;
  -moz-border-radius: 2.5em;
  background: url(asset_path("member_one.png"));
  background-size: cover;
}

#campaigns-adventure-prompt-text {
  display: inline-block;
  float: left;
  width: 150px;
  padding: .5em 0;
  font: lighter 18px Lato, sans-serif;
  color: #F8E6EF;
}

#campaigns-adventure-vehicle {
  width: 300px;
  height: 300px;
  position: relative;
  z-index: 1;
  top: 200px;
  left: 50px;
}

.campaigns-adventure-vehicle-body {
  width: 200px;
  height: 200px;
}

#ca-vehicle-boat {
  background-image: url(asset_path("egypt_boat.png"));
  background-repeat: no-repeat;
  position: relative;
  top: -8px;
}

#ca-vehicle-jeep {
  background-image: url(asset_path("safari_jeep.png"));
  background-repeat: no-repeat;
  position: relative;
  top: -30px;
}

#ca-vehicle-balloon {
  background-image: url(asset_path("air_balloon.png"));
  background-repeat: no-repeat;
  position: relative;
  top: -95px;
  left: -40px;
}

.ca-animate-boat {
  -webkit-animation: boat .75s alternate infinite ease-in-out;
  -moz-animation: boat .75s alternate infinite ease-in-out;
  animation: boat .75s alternate infinite ease-in-out;
}

@-webkit-keyframes boat {
  0%   { transform: rotate(0deg); }
  100% { transform: rotate(-5deg); }
}

@-moz-keyframes boat {
  0%   { transform: rotate(0deg); }
  100% { transform: rotate(-5deg); }
}

@keyframes boat {
  0%   { transform: rotate(0deg); }
  100% { transform: rotate(-5deg); }
}

.campaigns-adventure-wheel {
  width: 25px;
  height: 25px;
}

#campaigns-adventure-wheel-left {
  position: relative;
  top: -112px;
  left: -93px;
}

#campaigns-adventure-wheel-right {
  position: relative;
  top: -110px;
  left: -44px;
}

.ca-animate-jeep {
  -webkit-animation: jeep 1s linear infinite;
  -moz-animation: jeep 1s linear infinite;
  animation: jeep 1s linear infinite;
}

@-webkit-keyframes jeep {
  0%   { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

@-moz-keyframes jeep {
  0%   { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

@keyframes jeep {
  0%   { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

.ca-animate-balloon {
  -webkit-animation: balloon 2.5s alternate infinite ease-in-out;
  -moz-animation: balloon 2.5s alternate infinite ease-in-out;
  animation: balloon 2.5s alternate infinite ease-in-out;
}

@-webkit-keyframes balloon {
  0%   { transform: translate(0, 0); }
  100% { transform: translate(0, -8px); }
}

@-moz-keyframes balloon {
  0%   { transform: translate(0, 0); }
  100% { transform: translate(0, -8px); }
}

@keyframes balloon {
  0%   { transform: translate(0, 0); }
  100% { transform: translate(0, -8px); }
}

#campaigns-adventure-shadow {
  position: relative;
  top: -105px;
  left: -100px;
}

.ca-animate-shadow {
  -webkit-animation: shadow 2.5s alternate infinite ease-in-out;
  -moz-animation: shadow 2.5s alternate infinite ease-in-out;
  animation: shadow 2.5s alternate infinite ease-in-out;
}

@-webkit-keyframes shadow {
  0%   { transform: scale(1, 1); }
  100% { transform: scale(.85, .85); }
}

@-moz-keyframes shadow {
  0%   { transform: scale(1, 1); }
  100% { transform: scale(.85, .85); }
}

@keyframes shadow {
  0%   { transform: scale(1, 1); }
  100% { transform: scale(.85, .85); }
}

@media (max-width: 1000px) {
  /* fill in :-( */
}

@media (max-width: 600px) {
  /* fill in :-( */

}

